// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayButton should render 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "flexDirection": "row",
      "justifyContent": "flex-start",
    }
  }
>
  <View
    accessible={true}
    clickable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "transform": Array [
          Object {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      forceRatio={1.7777777777777777}
      style={
        Object {
          "aspectRatio": 1.7777777777777777,
          "backgroundColor": "#FFFFFF",
          "borderRadius": 16,
          "height": 80,
          "marginHorizontal": 16,
          "marginVertical": 0,
          "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 8,
        }
      }
    >
      <View
        forceRatio={1.7777777777777777}
        style={
          Object {
            "aspectRatio": 1.7777777777777777,
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "__typename": "ImageMediaSource",
                "cache": "force-cache",
                "uri": "https://res.cloudinary.com/apollos/image/fetch/c_limit,f_auto,q_auto:eco,w_1600/https://apollosrock.newspring.cc/GetImage.ashx%3Fguid%3Dfe44d493-b69f-4721-83f7-7942c4f99125",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#000000",
              "bottom": 0,
              "left": 0,
              "opacity": 0.4,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          centered={true}
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={16}
            bbWidth={16}
            height={16}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                undefined,
                null,
                Object {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={16}
          >
            <RNSVGGroup
              fill={
                Array [
                  0,
                  4278190080,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={Array []}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            >
              <RNSVGPath
                d="M20.0597015,13.7960954 L6.08955224,23.7223427 C5.75373134,23.9305857 5.35074627,24 5.01492537,24 C4.67910448,24 4.34328358,23.9305857 4.00746269,23.7223427 C3.40298507,23.3752711 3,22.681128 3,21.9175705 L3,2.06507592 C3,1.30151844 3.40298507,0.607375271 4.00746269,0.260303688 C4.6119403,-0.0867678959 5.41791045,-0.0867678959 6.02238806,0.260303688 L20.0597015,10.2559653 C20.6641791,10.6030369 21,11.29718 21,12.0607375 C21,12.7548807 20.6641791,13.3796095 20.0597015,13.7960954 Z"
                fill={
                  Array [
                    0,
                    4294506484,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          bottom={true}
          centered={true}
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": undefined,
            }
          }
        >
          <Text
            padded={true}
            style={
              Object {
                "color": "#DBDBD9",
                "fontFamily": "InterUI-Bold",
                "fontSize": 12,
                "lineHeight": 18,
                "paddingBottom": 9,
              }
            }
          >
            Play
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PlayButton should render with custom play icon 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "flexDirection": "row",
      "justifyContent": "flex-start",
    }
  }
>
  <View
    accessible={true}
    clickable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "transform": Array [
          Object {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      forceRatio={1.7777777777777777}
      style={
        Object {
          "aspectRatio": 1.7777777777777777,
          "backgroundColor": "#FFFFFF",
          "borderRadius": 16,
          "height": 80,
          "marginHorizontal": 16,
          "marginVertical": 0,
          "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 8,
        }
      }
    >
      <View
        forceRatio={1.7777777777777777}
        style={
          Object {
            "aspectRatio": 1.7777777777777777,
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "__typename": "ImageMediaSource",
                "cache": "force-cache",
                "uri": "https://res.cloudinary.com/apollos/image/fetch/c_limit,f_auto,q_auto:eco,w_1600/https://apollosrock.newspring.cc/GetImage.ashx%3Fguid%3Dfe44d493-b69f-4721-83f7-7942c4f99125",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#000000",
              "bottom": 0,
              "left": 0,
              "opacity": 0.4,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          centered={true}
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={16}
            bbWidth={16}
            height={16}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                undefined,
                null,
                Object {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            vbHeight={48}
            vbWidth={48}
            width={16}
          >
            <RNSVGGroup
              fill={
                Array [
                  0,
                  4278190080,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={Array []}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            >
              <RNSVGPath
                d="M24 0a24 24 0 1 1 0 48 24 24 0 0 1 0-48zm9.2 25.5c.5-.4.8-.9.8-1.4 0-.7-.3-1.2-.8-1.5l-12-8.3c-.5-.2-1.1-.2-1.7 0-.5.3-.8.9-.8 1.5v16.4a1.7 1.7 0 0 0 1.7 1.7c.3 0 .6 0 1-.2l11.8-8.2z"
                fill={
                  Array [
                    0,
                    4294506484,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          bottom={true}
          centered={true}
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": undefined,
            }
          }
        >
          <Text
            padded={true}
            style={
              Object {
                "color": "#DBDBD9",
                "fontFamily": "InterUI-Bold",
                "fontSize": 12,
                "lineHeight": 18,
                "paddingBottom": 9,
              }
            }
          >
            Play
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PlayButton should render with custom title 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "flexDirection": "row",
      "justifyContent": "flex-start",
    }
  }
>
  <View
    accessible={true}
    clickable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "transform": Array [
          Object {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      forceRatio={1.7777777777777777}
      style={
        Object {
          "aspectRatio": 1.7777777777777777,
          "backgroundColor": "#FFFFFF",
          "borderRadius": 16,
          "height": 80,
          "marginHorizontal": 16,
          "marginVertical": 0,
          "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 8,
        }
      }
    >
      <View
        forceRatio={1.7777777777777777}
        style={
          Object {
            "aspectRatio": 1.7777777777777777,
            "borderRadius": 16,
            "overflow": "hidden",
          }
        }
      >
        <RCTImageView
          fadeDuration={250}
          onLoad={[Function]}
          resizeMode="cover"
          source={
            Array [
              Object {
                "__typename": "ImageMediaSource",
                "cache": "force-cache",
                "uri": "https://res.cloudinary.com/apollos/image/fetch/c_limit,f_auto,q_auto:eco,w_1600/https://apollosrock.newspring.cc/GetImage.ashx%3Fguid%3Dfe44d493-b69f-4721-83f7-7942c4f99125",
              },
            ]
          }
          style={
            Object {
              "backgroundColor": "#A5A5A5",
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#000000",
              "bottom": 0,
              "left": 0,
              "opacity": 0.4,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          centered={true}
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={16}
            bbWidth={16}
            height={16}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                undefined,
                null,
                Object {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={16}
          >
            <RNSVGGroup
              fill={
                Array [
                  0,
                  4278190080,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={Array []}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            >
              <RNSVGPath
                d="M20.0597015,13.7960954 L6.08955224,23.7223427 C5.75373134,23.9305857 5.35074627,24 5.01492537,24 C4.67910448,24 4.34328358,23.9305857 4.00746269,23.7223427 C3.40298507,23.3752711 3,22.681128 3,21.9175705 L3,2.06507592 C3,1.30151844 3.40298507,0.607375271 4.00746269,0.260303688 C4.6119403,-0.0867678959 5.41791045,-0.0867678959 6.02238806,0.260303688 L20.0597015,10.2559653 C20.6641791,10.6030369 21,11.29718 21,12.0607375 C21,12.7548807 20.6641791,13.3796095 20.0597015,13.7960954 Z"
                fill={
                  Array [
                    0,
                    4294506484,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          bottom={true}
          centered={true}
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": undefined,
            }
          }
        >
          <Text
            padded={true}
            style={
              Object {
                "color": "#DBDBD9",
                "fontFamily": "InterUI-Bold",
                "fontSize": 12,
                "lineHeight": 18,
                "paddingBottom": 9,
              }
            }
          >
            CUSTOM_TITLE
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
